# github

./: .gitignore  Cargo.toml  Config.toml  README.md  ebobo-server.db  index.html
.github/workflows/: default.yml  deploy.yml  github.yml  shuttle.yaml
.well-known/matrix/: client  server
client/: Cargo.toml  index.html  style.scss
client/src/: api.rs  auth.rs  fight.rs  fingerprint.rs  footer.rs  main.rs  routing.rs
client/src/components/: arena.rs  auth.rs  choose.rs  fight.rs  fighters.rs  footer.rs  index.rs  mod.rs
client/src/pages/: choose.rs  index.rs
migration/: Cargo.toml
migration/src/: m20240315_162352_create_devices_table.rs
server/: Cargo.toml  Settings.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20240315_162352_create_devices_table.rs  m20240315_162352_create_fighters_table.rs  m20240316_124623_create_locations_table.rs  m20240316_124859_create_devices_locations_table.rs  m20240329_205732_create_requests_table.rs  m20240329_224710_alter_fighters_table_add_audit.rs  m20240329_230617_alter_fighters_table_add_rank.rs  m20240330_104732_initial.rs
server/src/: auth.rs  fighter.rs  index.rs  main.rs  models.rs
server/src/domain/: device.rs  location.rs  mod.rs
server/src/entities/: devices.rs  devices_locations.rs  fighters.rs  locations.rs  matches.rs  mod.rs  plays.rs  prelude.rs  queue.rs  requests.rs  users.rs
server/src/fairings/: auth.rs  cors.rs  mod.rs
server/src/guards/: auth.rs  device.rs  fighter.rs  mod.rs
server/src/handlers/: admin.rs  arena.rs  auth.rs  available.rs  choose.rs  fight.rs  index.rs  mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: fingerprint.rs  lib.rs  main.rs
www/: index.html
