[package]
name = "ebobo"
version = "0.1.1"
edition = "2021"

[dependencies]
serde_json = "1.0.99"
wasm-fingerprint = { git = "https://github.com/drbh/wasm-fingerprint.git", version = "0.0.1" }

[dependencies.yew]
version = "0.20"
features = ["csr"] 

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies.serde]
version = "1.0.163"
features = ["derive"]
