[package]
name = "ebobo"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
wasm-fingerprint = { version = "0.0.1", git = "https://github.com/drbh/wasm-fingerprint.git" }
yew = { version = "0.20", features = ["csr"] }
web-sys = { version = "0.3.4",  features = ['Document']}