[package]
name = "ebobo-server"
version = "0.1.3"
edition = "2021"

[dependencies]
ebobo-shared = { path = "../shared" }
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
tokio = "1.26.0"
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"
shuttle-shared-db = { version = "0.41.0" }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
