[package]
name = "ebobo-server"
version = "0.1.3"
edition = "2021"

[dependencies]
ebobo-shared = { path = "../shared" }
anyhow = "1.0.81"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
tokio = "1.26.0"
rocket = { version = "0.5.0", features = ["json"] }
shuttle-rocket = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0" }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15.0"
