[package]
name = "ebobo-server"
version = "0.1.3"
edition = "2021"

[dependencies]
ebobo-shared = { path = "../shared" }
serde = { version = "1.0.197", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_ws = "0.1.1"
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
